# moto-diag

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  ROADMAP_AUTHORITY.md  f9_ssot_constants.toml  implementation.md  main.py  phase_log.md  pyproject.toml
data/dtc_codes/: generic.json  harley_davidson.json
data/knowledge/: known_issues_cross_platform_brakes.json  known_issues_cross_platform_carbs.json  known_issues_cross_platform_charging.json  known_issues_cross_platform_cooling.json  known_issues_cross_platform_drivetrain.json  known_issues_cross_platform_fi.json  known_issues_cross_platform_ignition.json  known_issues_cross_platform_starting.json  known_issues_harley.json  known_issues_harley_cross_era.json  known_issues_harley_electrical.json  known_issues_harley_evo_bigtwin.json  known_issues_harley_m8.json  known_issues_harley_revmax.json  known_issues_harley_sportster_evo.json  known_issues_harley_sportster_rb.json  known_issues_harley_tc88.json  known_issues_harley_tc96.json  known_issues_harley_vrsc.json  known_issues_honda_cbr1000rr.json  known_issues_honda_cbr600f.json  known_issues_honda_cbr600rr.json  known_issues_honda_cbr_supersport.json  known_issues_honda_cross_model.json  known_issues_honda_cruisers.json  known_issues_honda_dualsport.json  known_issues_honda_electrical.json  known_issues_honda_rebel.json  known_issues_honda_standards.json  known_issues_honda_v4.json  known_issues_honda_vintage.json  known_issues_kawasaki_dual_sport.json  known_issues_kawasaki_electrical.json  known_issues_kawasaki_h2.json  known_issues_kawasaki_hyperbike.json  known_issues_kawasaki_ninja_small.json  known_issues_kawasaki_vintage.json  known_issues_kawasaki_vulcan.json  known_issues_kawasaki_z_naked.json  known_issues_kawasaki_zx10r.json  (+27 more)
data/pricing/: labor_rates.json  prep_labor.json
docs/: ROADMAP.md
docs/architecture/: auth-policy.md  report-document-shape.md
docs/mobile/: ADR-001-framework-choice.md  phase-186-handoff.md
docs/patterns/: f9-mock-vs-runtime-drift.md
docs/phases/: 02_implementation.md  02_phase_log.md  03_implementation.md  03_phase_log.md  04_phase_log.md  05_implementation.md  06_phase_log.md  07_phase_log.md
scripts/: check_f9_patterns.py
src/motodiag/: __init__.py
tests/: conftest.py  test_gate1_integration.py  test_phase01_scaffold.py  test_phase02_config.py  test_phase03_database.py  test_phase04_vehicles.py  test_phase05_dtc.py  test_phase06_symptoms.py  test_phase07_sessions.py  test_phase08_issues.py  test_phase09_search.py  test_phase100_video_frames.py  test_phase101_vision.py  test_phase102_fusion.py  test_phase103_comparative.py  test_phase104_realtime.py  test_phase105_annotation.py  test_phase106_reports.py  test_phase107_coaching.py  test_phase108_gate4_integration.py  test_phase109_cli_foundation.py  test_phase10_logging.py  test_phase110_vehicle_expansion.py  test_phase111_kb_schema_expansion.py  test_phase112_auth_layer.py  test_phase113_crm_foundation.py  test_phase114_workflow_substrate.py  test_phase115_i18n.py  test_phase116_feedback.py  test_phase117_reference.py  test_phase118_ops_substrate.py  test_phase119_photo_annotation.py  test_phase120_sound_signatures_expansion.py  test_phase121_gate_r.py  test_phase122_intake.py  test_phase123_diagnose.py  test_phase124_code.py  test_phase125_quick.py  test_phase126_report.py  test_phase127_history.py  (+171 more)
(+862 files in other folders)
