[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "motodiag"
version = "0.3.0"
description = "AI-powered motorcycle diagnostic tool — symptom analysis, fault code interpretation, guided troubleshooting"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Kubanjaze"},
]
keywords = ["motorcycle", "diagnostics", "obd", "mechanic", "troubleshooting"]

dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    # Phase 191C: F9 mock-vs-runtime-drift pattern lint via
    # scripts/check_f9_patterns.py wired through .pre-commit-config.yaml.
    # Architect-side opt-in via `pre-commit install`.
    "pre-commit>=3.5",
]
ai = [
    "anthropic>=0.40",
]
api = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    # Phase 191B: required by FastAPI's Form() + UploadFile for the
    # POST /v1/sessions/{id}/videos multipart upload endpoint. Without
    # it, FastAPI raises RuntimeError("Form data requires
    # python-multipart") at create_app() time. Pinned at 0.0.20+ to
    # match the version installed during Phase 191B fix-cycle-1.
    "python-multipart>=0.0.20",
]
hardware = [
    "pyserial>=3.5",
]
vision = [
    "pillow>=10.0",
]
export = [
    "markdown>=3.5",
    "xhtml2pdf>=0.2.13",
]
can = [
    "python-can>=4.0",
]
parquet = [
    "pyarrow>=15.0",
]
dashboard = [
    "textual>=0.40,<1.0",
]
all = [
    "motodiag[dev,ai,api,hardware,vision,export,can,parquet,dashboard]",
]

[project.scripts]
motodiag = "motodiag.cli.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"motodiag.hardware.scenarios" = ["*.yaml"]
"motodiag.advanced" = ["*.json"]
"motodiag.advanced.data" = ["*.json"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
